project/log/20250610_114654.log
Hello DirectX!

clientSize:1280,720

Use Adapater: NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel: 12.2 

Complete create D3D12Device!!!!

Begin CompileShader, path:object3D.VS.hlsl, profile:vs_6_0

Compile Succeded, path:object3D.VS.hlsl, profile:vs_6_0

Begin CompileShader, path:object3D.PS.hlsl, profile:ps_6_0

object3D.PS.hlsl:32:1: error: Semantic TEXCOORD is invalid for shader model: ps
PixelShaderOutput main(VertexShaderOutput input)
^
object3D.PS.hlsl:32:1: error: Semantic NORMAL is invalid for shader model: ps

